<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".SettingActivity">

    <EditText
        android:id="@+id/etDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_hint_display_name" />

    <Button
        android:id="@+id/btChangeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_button"
        android:text="@string/settings_button_change_name"
        android:textColor="@color/colorButtonText" />

    <Button
        android:id="@+id/btLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_button"
        android:text="@string/settings_button_logout"
        android:textColor="@color/colorButtonText" />

</LinearLayout>