<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".QuestionSendActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/question_text_title" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentStart="true"
        android:gravity="top"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTitle"
        android:layout_alignParentStart="true"
        android:text="@string/question_text_subject" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSubject"
        android:layout_alignParentStart="true"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="10" />

    <TextView
        android:id="@+id/tvCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSubject"
        android:layout_alignParentStart="true"
        android:text="@string/question_text_capture" />

    <ImageView
        android:id="@+id/ivCapture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/tvCapture"
        android:layout_centerHorizontal="true"
        android:background="#d3d3d3" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivCapture"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:text="@string/question_button_send"
        android:textColor="@color/colorButtonText" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btSend"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>